# HEIG_PCO_Labo4

./: CMakeLists.txt  README.md  feedback.md  report.tex
QtrainSim/: CMakeLists.txt
code/: CMakeLists.txt
code/src/: cppmain.cpp  locomotivebehavior.cpp  locomotivebehavior.h  synchro.h
